DAPS-1055 fix navbar overlap issue

--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -34,7 +34,10 @@ body {
 #posLink,
 #txLink,
 .Link {
-    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto 2.5rem;
 }
 
 h1 {
@@ -97,6 +100,9 @@ form {
     box-shadow: 0 2px 6px #000000;
     background-image: linear-gradient(to top, #450040 0%, #250639 100%);
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .SearchBox {
@@ -265,7 +271,7 @@ form {
 }
 
 .Logo {
-    width: 500px;
+    width: 400px;
 }
 
 #blockStatusBar {
